CSDEV/objects/HAE_Related_Account_Contact__c.object
<CustomObject>
    <description>HAE: Custom Junction object to relate multiple Accounts and Contacts.</description>
    <fields>
        <fullName>HAE_Account_Contact__c</fullName>
        <label>Account - Contact (Hidden)</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HAE_Account__c</fullName>
        <description>HAE: Associate multiple accounts to Related Account - Contact Object</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Account – Contacts</relationshipLabel>
        <relationshipName>Related_Account_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HAE_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>HAE: Flag to indicate if the Related Account - Contact record is active or not.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HAE_Contact__c</fullName>
        <description>HAE: Master Detail field to associate multiple contacts to Related Account - Contact Object.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related Account – Contacts</relationshipLabel>
        <relationshipName>Related_Account_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Related Account – Contact</label>
    <nameField>
        <displayFormat>RAC-{000000000}</displayFormat>
        <label>Related Account – Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Account – Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>